[gd_scene load_steps=12 format=2]

[ext_resource path="res://main/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://room/room.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/import_progress_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/main_menu_camera.gd" type="Script" id=4]
[ext_resource path="res://player/player_controller.tscn" type="PackedScene" id=5]
[ext_resource path="res://main/game.gd" type="Script" id=6]
[ext_resource path="res://ui/debug_info.tscn" type="PackedScene" id=7]
[ext_resource path="res://chat/chat_window.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/disconnect_master_server_dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/disconnect_host_dialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/game_ui.tscn" type="PackedScene" id=11]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Room" parent="." instance=ExtResource( 2 )]
pause_mode = 1

[node name="ImportProgressPanel" parent="." instance=ExtResource( 3 )]
pause_mode = 1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -150.0
margin_right = 225.0
margin_bottom = -40.0

[node name="PlayerController" parent="." instance=ExtResource( 5 )]
pause_mode = 1

[node name="MainMenuCamera" type="Camera" parent="."]
physics_interpolation_mode = 1
current = true
far = 500.0
script = ExtResource( 4 )
orbit_height = 50.0
orbit_radius = 150.0
orbit_speed = 0.05
transition_duration_sec = 3.0

[node name="MenuBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )

[node name="ChatWindow" parent="." instance=ExtResource( 8 )]
pause_mode = 1

[node name="GameUI" parent="." instance=ExtResource( 11 )]
pause_mode = 1
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="DisconnectHostDialog" parent="." instance=ExtResource( 10 )]

[node name="DisconnectMasterServerDialog" parent="." instance=ExtResource( 9 )]

[node name="DebugInfo" parent="." instance=ExtResource( 7 )]
player_controller_path = NodePath("../PlayerController")

[connection signal="visibility_changed" from="ImportProgressPanel" to="." method="_on_ImportProgressPanel_visibility_changed"]
[connection signal="focus_leaving" from="ChatWindow" to="." method="_on_ChatWindow_focus_leaving"]
[connection signal="text_entered" from="ChatWindow" to="." method="_on_ChatWindow_text_entered"]
[connection signal="show_game_menu" from="GameUI" to="." method="_on_GameUI_show_game_menu"]
[connection signal="exiting_to_main_menu" from="MainMenu" to="." method="_on_MainMenu_exiting_to_main_menu"]
[connection signal="popup_about_to_hide" from="MainMenu" to="." method="_on_MainMenu_popup_about_to_hide"]
[connection signal="popup_about_to_show" from="MainMenu" to="." method="_on_MainMenu_popup_about_to_show"]
[connection signal="returning_to_game" from="MainMenu" to="." method="_on_MainMenu_returning_to_game"]
[connection signal="starting_multiplayer" from="MainMenu" to="." method="_on_MainMenu_starting_multiplayer"]
[connection signal="starting_singleplayer" from="MainMenu" to="." method="_on_MainMenu_starting_singleplayer"]
[connection signal="save_and_return_to_main_menu" from="DisconnectHostDialog" to="." method="_on_DisconnectHostDialog_save_and_return_to_main_menu"]
